Bug 15538 - smbget auth function doesn't set values for password prompt correctly
Summary: smbget auth function doesn't set values for password prompt correctly
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Tools (show other bugs)
Version: 4.19.3
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-20 11:39 UTC by Andreas Schneider
Modified: 2024-01-08 14:39 UTC (History)
2 users (show)

See Also:


Attachments
patch for 4.19 (4.69 KB, patch)
2024-01-04 12:23 UTC, Andreas Schneider
vl: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2023-12-20 11:39:51 UTC
smbget auth function doesn't set values for password prompt correctly

Patch will follow
Comment 1 Samba QA Contact 2024-01-04 11:27:04 UTC
This bug was referenced in samba master:

25021b836f74d3d247bce44c6c02a2d8b2cc39ea
1134c4f3a63c9618c3fb79abefb40a798c7c1701
Comment 2 Andreas Schneider 2024-01-04 12:23:01 UTC
Created attachment 18217 [details]
patch for 4.19
Comment 3 Jule Anger 2024-01-08 10:14:55 UTC
Pushed to autobuild-v4-19-test.
Comment 4 Samba QA Contact 2024-01-08 14:03:36 UTC
This bug was referenced in samba v4-19-test:

98e62c70894f0094b25231b38691bdd62bc0d637
2084a27c9ab27215699ea89a6023cf8bb6bb0429
Comment 5 Jule Anger 2024-01-08 14:23:08 UTC
Closing out bug report.

Thanks!
Comment 6 Samba QA Contact 2024-01-08 14:39:10 UTC
This bug was referenced in samba v4-19-stable (Release samba-4.19.4):

98e62c70894f0094b25231b38691bdd62bc0d637
2084a27c9ab27215699ea89a6023cf8bb6bb0429