source3/utils/smbget.c
@@ -129,6 +129,7 @@ static void get_auth_data_with_context_fn(SMBCCTX *ctx,
 			strncpy(dom, domain, dom_len - 1);
 		}
 	}
+	cli_credentials_set_domain(creds, dom, obtained);
 
 	username = cli_credentials_get_username_and_obtained(creds, &obtained);
 	if (username != NULL) {
@@ -143,6 +144,7 @@ static void get_auth_data_with_context_fn(SMBCCTX *ctx,
 			strncpy(usr, username, usr_len - 1);
 		}
 	}
+	cli_credentials_set_username(creds, usr, obtained);
 
 	password = cli_credentials_get_password_and_obtained(creds, &obtained);
 	if (password != NULL) {
@@ -157,16 +159,17 @@ static void get_auth_data_with_context_fn(SMBCCTX *ctx,
 			strncpy(pwd, password, pwd_len - 1);
 		}
 	}
+	cli_credentials_set_password(creds, pwd, obtained);
 
-	smbc_set_credentials_with_fallback(ctx, domain, username, password);
+	smbc_set_credentials_with_fallback(ctx, dom, usr, pwd);
 
-	if (!opt.quiet && username != NULL) {
-		if (username[0] == '\0') {
+	if (!opt.quiet) {
+		if (usr[0] == '\0') {
 			printf("Using guest user\n");
+		} else if (dom[0] == '\0') {
+			printf("Using user: %s\n", usr);
 		} else {
-			printf("Using domain: %s, user: %s\n",
-				domain,
-				username);
+			printf("Using domain: %s, user: %s\n", dom, usr);
 		}
 	}
 }
